# opengl-first-steps

./: .gitignore  CMakeLists.txt  README.md  glm  libs.h  logger.h  main.cpp  shader.cpp  shader.h
shaders/: shader.fs  shader.vs
